<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_upgrade"
            android:icon="@drawable/flag_default_ic"
            android:title="@string/country_selection" />

        <item
            android:id="@+id/nav_unlock"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/purchases"
            android:visible="false" />

        <item
            android:id="@+id/nav_helpus"
            android:icon="@drawable/ic_feedback_24"
            android:title="Feedback" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_rate_24"
            android:title="@string/rate" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings"
            android:visible="false" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_black"
            android:title="@string/faq"
            android:visible="false" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_icon"
            android:title="@string/about"
            android:visible="false" />

        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_lock_open_24"
            android:title="Privacy Policy" />

    </group>

</menu>
